#add - focus input field on any click

--- a/input-ripple.css
+++ b/input-ripple.css
@@ -7,6 +7,15 @@
     cursor: text;
 }
 
+::shadow {
+    /*padding: .5em 1em;*/
+}
+
+:host /deep/ input {
+    width: 100%;
+    padding: 0;
+}
+
 #container {
     position: relative;
     left: 0;
@@ -18,6 +27,7 @@
 
 #label {
     position: absolute;
+    pointer-events: none;
 }
 #label.hidden {
     display: none;
