--- a/input-ripple.css
+++ b/input-ripple.css
@@ -15,6 +15,19 @@
     width: 100%;
     padding: 0;
     color: inherit;
+    text-align: inherit;
+}
+
+:host(.center) {
+    text-align: center;
+}
+
+.fit {
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    padding: .5em 1em;
 }
 
 #container {
